--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<h1>PNG Lite Search Engine</h1>
+
 <script async src="https://cse.google.com/cse.js?cx=619b8f53193764106">
 </script>
 <div class="gcse-search"></div>
