--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1><A href="https://mohanshetty.github.io/pnglite-google-search">PNG Lite Search Engine</a></h1>
+<h1><A href="https://mohanshetty.github.io/pnglite-google-search/index.html">PNG Lite Search Engine</a></h1>
 
 <script async src="https://cse.google.com/cse.js?cx=619b8f53193764106">
 </script>
