--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1><A href="https://mohanshetty.github.io/pnglite-google-search/index.html">PNG Lite Search Engine</a></h1>
-<p>Applied 02</p>
+<p>Applied 03</p>
 
 <script async src="https://cse.google.com/cse.js?cx=619b8f53193764106">
 </script>
-<div class="gcse-searchresults-only"></div>
+<div class="gcse-search"></div>
